--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.0.6",
     "framer-motion": "^11.0.3",
+    "lucide-react": "^0.545.0",
     "next": "^14.2.31",
     "next-intl": "^3.4.5",
     "react": "^18.3.1",
@@ -40,7 +41,7 @@
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.8.3",
-    "@lhci/cli": "^0.13.0",
+    "@lhci/cli": "^0.14.0",
     "@playwright/test": "^1.41.1",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
@@ -56,10 +57,11 @@
     "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8.4.33",
+    "postcss": "^8.5.6",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.13",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3"
   },
   "engines": {
