--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,39 @@
 {
-    "$schema": "https://getcomposer.org/schema.json",
-    "name": "laravel/laravel",
+    "name": "eldercare-sg/backend",
     "type": "project",
-    "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "description": "ElderCare SG - Laravel Backend API",
+    "keywords": ["laravel", "eldercare", "api", "singapore", "pdpa"],
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "laravel/framework": "^12.0",
+        "laravel/framework": "^11.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "guzzlehttp/guzzle": "^7.8",
+        "predis/predis": "^2.2",
+        "laravel/horizon": "^5.21",
+        "spatie/laravel-activitylog": "^4.8",
+        "spatie/laravel-permission": "^6.3",
+        "meilisearch/meilisearch-php": "^1.6",
+        "league/flysystem-aws-s3-v3": "^3.0",
+        "twilio/sdk": "^7.16",
+        "mailchimp/marketing": "^3.0",
         "livewire/livewire": "^3.6",
         "spatie/laravel-medialibrary": "^11.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
         "laravel/breeze": "^2.3",
-        "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.24",
+        "laravel/pail": "^1.2.2",
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
-        "nunomaduro/collision": "^8.6",
-        "phpunit/phpunit": "^11.5.3"
+        "nunomaduro/collision": "^8.5",
+        "phpunit/phpunit": "^10.5",
+        "spatie/laravel-ignition": "^2.4",
+        "larastan/larastan": "^2.8",
+        "pestphp/pest": "^2.36",
+        "pestphp/pest-plugin-laravel": "^2.4"
     },
     "autoload": {
         "psr-4": {
@@ -35,22 +48,6 @@
         }
     },
     "scripts": {
-        "setup": [
-            "composer install",
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
-            "@php artisan key:generate",
-            "@php artisan migrate --force",
-            "npm install",
-            "npm run build"
-        ],
-        "dev": [
-            "Composer\\Config::disableProcessTimeout",
-            "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite --kill-others"
-        ],
-        "test": [
-            "@php artisan config:clear --ansi",
-            "@php artisan test"
-        ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
@@ -66,9 +63,11 @@
             "@php -r \"file_exists('database/database.sqlite') || touch('database/database.sqlite');\"",
             "@php artisan migrate --graceful --ansi"
         ],
-        "pre-package-uninstall": [
-            "Illuminate\\Foundation\\ComposerScripts::prePackageUninstall"
-        ]
+        "test": "phpunit",
+        "test:coverage": "phpunit --coverage-html coverage",
+        "pint": "./vendor/bin/pint",
+        "pint:test": "./vendor/bin/pint --test",
+        "analyse": "./vendor/bin/phpstan analyse"
     },
     "extra": {
         "laravel": {
@@ -85,5 +84,11 @@
         }
     },
     "minimum-stability": "stable",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": {
+        "nova": {
+            "type": "composer",
+            "url": "https://nova.laravel.com"
+        }
+    }
 }
