--- a/.editorconfig
+++ b/.editorconfig
@@ -1,15 +1,26 @@
+# EditorConfig: https://editorconfig.org
+
 root = true
 
 [*]
 charset = utf-8
 end_of_line = lf
-indent_size = 4
-indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
+indent_style = space
+indent_size = 2
 
-[*.md]
+[*.{php,blade.php}]
+indent_size = 4
+
+[*.py]
+indent_size = 4
+
+[*.{md,txt}]
 trim_trailing_whitespace = false
+
+[Makefile]
+indent_style = tab
 
 [*.{yml,yaml}]
 indent_size = 2
