--- a/.gitattributes
+++ b/.gitattributes
@@ -1,11 +1,66 @@
+# Auto detect text files and perform LF normalization
+#* text=auto
 * text=auto eol=lf
 
+# Source code
+*.php text eol=lf
+*.js text eol=lf
+*.ts text eol=lf
+*.tsx text eol=lf
+*.jsx text eol=lf
+*.json text eol=lf
+*.yml text eol=lf
+*.yaml text eol=lf
+*.xml text eol=lf
+*.md text eol=lf
 *.blade.php diff=html
 *.css diff=css
 *.html diff=html
-*.md diff=markdown
-*.php diff=php
 
-/.github export-ignore
+# Configuration files
+.env* text eol=lf
+.gitignore text eol=lf
+.gitattributes text eol=lf
+.editorconfig text eol=lf
+
+# Shell scripts
+*.sh text eol=lf
+*.bash text eol=lf
+
+# Docker
+Dockerfile text eol=lf
+docker-compose*.yml text eol=lf
+
+# Documentation
+*.md text
+*.txt text
+LICENSE text
+
+# Graphics
+*.png binary
+*.jpg binary
+*.jpeg binary
+*.gif binary
+*.ico binary
+*.svg text
+
+# Fonts
+*.woff binary
+*.woff2 binary
+*.ttf binary
+*.eot binary
+
+# Archives
+*.zip binary
+*.tar binary
+*.gz binary
+*.7z binary
+
+# Exclude from export
+.gitattributes export-ignore
+.gitignore export-ignore
+.github/ export-ignore
+tests/ export-ignore
+docs/ export-ignore
 CHANGELOG.md export-ignore
 .styleci.yml export-ignore
