--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,76 @@
-*.log
-.DS_Store
+# Dependencies
+node_modules/
+vendor/
+
+# Environment variables
 .env
-.env.backup
+.env.local
+.env.*.local
 .env.production
-.phpactor.json
-.phpunit.result.cache
-/.fleet
-/.idea
-/.nova
-/.phpunit.cache
-/.vscode
-/.zed
-/auth.json
-/node_modules
-/public/build
-/public/hot
-/public/storage
-/storage/*.key
-/storage/pail
-/vendor
-Homestead.json
-Homestead.yaml
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
 Thumbs.db
+
+# Build outputs
+/frontend/.next/
+/frontend/out/
+/frontend/build/
+/backend/public/build/
+/backend/public/hot
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/backend/storage/logs/
+
+# Testing
+/coverage/
+/frontend/.nyc_output/
+/backend/storage/app/public/
+/backend/storage/framework/cache/
+/backend/storage/framework/sessions/
+/backend/storage/framework/testing/
+/backend/storage/framework/views/
+
+# Temporary files
+*.tmp
+.cache/
+
+# Database
+*.sqlite
+*.sqlite-journal
+/database/*.sqlite
+
+# Docker volumes
+docker/mysql/data/
+
+# Terraform
+terraform/.terraform/
+terraform/*.tfstate
+terraform/*.tfstate.backup
+terraform/.terraform.lock.hcl
+
+# Secrets
+*.pem
+*.key
+secrets/
+
+# Build artifacts
+dist/
+build/
+
+# Package manager locks (include in production)
+# Uncomment if using different package manager versions
+# package-lock.json
+# yarn.lock
+# composer.lock
