--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,65 +1,89 @@
-APP_NAME=Laravel
+# Application
+APP_NAME="ElderCare SG"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+# Frontend URL (CORS)
+FRONTEND_URL=http://localhost:3000
 
-APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
+# Database
+DB_CONNECTION=mysql
+DB_HOST=mysql
+DB_PORT=3306
+DB_DATABASE=eldercare_db
+DB_USERNAME=eldercare
+DB_PASSWORD=eldercare_secret
 
-PHP_CLI_SERVER_WORKERS=4
-
-BCRYPT_ROUNDS=12
-
-LOG_CHANNEL=stack
-LOG_STACK=single
-LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
-
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
-
-SESSION_DRIVER=database
-SESSION_LIFETIME=120
-SESSION_ENCRYPT=false
-SESSION_PATH=/
-SESSION_DOMAIN=null
-
-BROADCAST_CONNECTION=log
-FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
-
-CACHE_STORE=database
-# CACHE_PREFIX=
-
-MEMCACHED_HOST=127.0.0.1
-
-REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
+# Redis
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+REDIS_CLIENT=phpredis
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
+# Cache
+CACHE_DRIVER=redis
+SESSION_DRIVER=redis
+QUEUE_CONNECTION=redis
+
+# Mail (Development - Mailhog)
+MAIL_MAILER=smtp
+MAIL_HOST=mailhog
+MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS="noreply@eldercare-sg.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
+# AWS (Production)
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
+AWS_DEFAULT_REGION=ap-southeast-1
+AWS_BUCKET=eldercare-sg-media-staging
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-VITE_APP_NAME="${APP_NAME}"
+# MeiliSearch
+MEILISEARCH_HOST=http://meilisearch:7700
+MEILISEARCH_KEY=masterKey_dev_only_change_in_production
+
+# External Services - Calendly
+CALENDLY_API_KEY=
+CALENDLY_WEBHOOK_SIGNING_KEY=
+
+# External Services - Mailchimp
+MAILCHIMP_API_KEY=
+MAILCHIMP_LIST_ID=
+
+# External Services - Twilio
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_PHONE_NUMBER=
+
+# External Services - Cloudflare Stream
+CLOUDFLARE_ACCOUNT_ID=
+CLOUDFLARE_STREAM_API_TOKEN=
+
+# Monitoring - Sentry
+SENTRY_LARAVEL_DSN=
+SENTRY_TRACES_SAMPLE_RATE=1.0
+
+# Monitoring - New Relic
+NEWRELIC_LICENSE_KEY=
+NEWRELIC_APPNAME="ElderCare SG - Local"
+
+# PDPA Compliance
+PRIVACY_POLICY_VERSION=1.0
+DATA_RETENTION_DAYS=730
+AUDIT_LOG_RETENTION_YEARS=7
+
+# Application Settings
+DEFAULT_LOCALE=en
+SUPPORTED_LOCALES=en,zh,ms,ta
+TIMEZONE=Asia/Singapore
+
+# Feature Flags
+FEATURE_VIRTUAL_TOURS=false
+FEATURE_SMS_NOTIFICATIONS=true
+FEATURE_ANALYTICS=true
