--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "test:ci": "jest --ci --coverage",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
+    "test:percy": "percy exec -- playwright test",
     "lighthouse": "lhci autorun"
   },
   "dependencies": {
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@axe-core/playwright": "^4.8.3",
     "@lhci/cli": "^0.14.0",
+    "@percy/cli": "^1.30.0",
     "@playwright/test": "^1.41.1",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
