--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:wX7m/fGCvO0J7cUXCZba/P8uhKo6V1S+8GmfFL3LsV8=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=eldercare_db
+DB_USERNAME=eldercare_admin
+DB_PASSWORD=your_secure_password
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
