--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:ioxp7wpDI9iy8hhq1lkdhzVf9/Sa4cA067kJnL/2HlU=
 APP_DEBUG=true
 APP_URL=http://localhost
 
