--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@axe-core/playwright": "^4.8.3",
     "@lhci/cli": "^0.14.0",
+    "@tailwindcss/typography": "^0.5.10",
     "@percy/cli": "^1.30.0",
     "@playwright/test": "^1.41.1",
     "@testing-library/jest-dom": "^6.2.0",
