--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.8.3",
+    "@storybook/react": "^8.1.0",
     "@lhci/cli": "^0.14.0",
     "@tailwindcss/typography": "^0.5.10",
     "@percy/cli": "^1.30.0",
