--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "type-check": "tsc --noEmit",
     "test": "jest --watch",
@@ -45,7 +47,12 @@
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.8.3",
+    "@storybook/addon-a11y": "^8.1.0",
+    "@storybook/addon-essentials": "^8.1.0",
+    "@storybook/addon-interactions": "^8.1.0",
+    "@storybook/nextjs": "^8.1.0",
     "@storybook/react": "^8.1.0",
+    "@storybook/test": "^8.1.0",
     "@lhci/cli": "^0.14.0",
     "@tailwindcss/typography": "^0.5.10",
     "@percy/cli": "^1.30.0",
