--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,12 +47,14 @@
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.8.3",
-    "@storybook/addon-a11y": "^8.1.0",
-    "@storybook/addon-essentials": "^8.1.0",
-    "@storybook/addon-interactions": "^8.1.0",
-    "@storybook/nextjs": "^8.1.0",
-    "@storybook/react": "^8.1.0",
-    "@storybook/test": "^8.1.0",
+    "@storybook/addon-a11y": "8.6.14",
+    "@storybook/addon-essentials": "8.6.14",
+    "@storybook/addon-interactions": "8.6.14",
+    "@storybook/builder-vite": "8.6.14",
+    "@storybook/react": "8.6.14",
+    "@storybook/react-vite": "8.6.14",
+    "@storybook/test": "8.6.14",
+    "storybook": "8.6.14",
     "@lhci/cli": "^0.14.0",
     "@tailwindcss/typography": "^0.5.10",
     "@percy/cli": "^1.30.0",
@@ -76,7 +78,9 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vite": "^5.4.10",
+    "@vitejs/plugin-react": "^4.2.1"
   },
   "engines": {
     "node": ">=18.0.0"
