--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,18 +35,23 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.0.6",
     "framer-motion": "^11.0.3",
+    "glob": "9",
     "lucide-react": "^0.545.0",
     "next": "^14.2.31",
     "next-intl": "^3.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.49.3",
+    "rimraf": "^4.4.1",
     "tailwind-merge": "^2.2.0",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.8.3",
+    "@lhci/cli": "^0.14.0",
+    "@percy/cli": "^1.30.0",
+    "@playwright/test": "^1.41.1",
     "@storybook/addon-a11y": "8.6.14",
     "@storybook/addon-essentials": "8.6.14",
     "@storybook/addon-interactions": "8.6.14",
@@ -54,21 +59,18 @@
     "@storybook/react": "8.6.14",
     "@storybook/react-vite": "8.6.14",
     "@storybook/test": "8.6.14",
-    "storybook": "8.6.14",
-    "@lhci/cli": "^0.14.0",
     "@tailwindcss/typography": "^0.5.10",
-    "@percy/cli": "^1.30.0",
-    "@playwright/test": "^1.41.1",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.0",
+    "@typescript-eslint/parser": "^8.46.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.31",
     "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
@@ -76,11 +78,11 @@
     "postcss": "^8.5.6",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "storybook": "8.6.14",
     "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3",
-    "vite": "^5.4.10",
-    "@vitejs/plugin-react": "^4.2.1"
+    "vite": "^5.4.10"
   },
   "engines": {
     "node": ">=18.0.0"
