--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "migrate:fresh": "cd backend && php artisan migrate:fresh --seed"
   },
   "devDependencies": {
-	"axios": "^1.11.0",
-	"concurrently": "^9.0.1",
-	"jsdom": "^27.0.0",
-	"vite": "^7.1.7",
-	"vitest": "^3.2.4"
+    "axios": "^1.11.0",
+    "concurrently": "^9.0.1",
+    "jsdom": "^27.0.0",
+    "vite": "^7.1.7",
+    "vitest": "^3.2.4"
   },
   "engines": {
     "node": ">=18.0.0",
@@ -54,5 +54,9 @@
     "accessibility"
   ],
   "author": "ElderCare SG Team",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "glob": "^9.3.5",
+    "rimraf": "^4.4.1"
+  }
 }
