--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,7 +57,7 @@
     "@storybook/addon-interactions": "8.6.14",
     "@storybook/builder-vite": "8.6.14",
     "@storybook/react": "8.6.14",
-    "@storybook/react-vite": "^8.6.14",
+    "@storybook/react-vite": "8.6.14",
     "@storybook/test": "8.6.14",
     "@tailwindcss/typography": "^0.5.10",
     "@testing-library/jest-dom": "^6.2.0",
@@ -68,7 +68,7 @@
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^8.46.0",
     "@typescript-eslint/parser": "^8.46.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.31",
@@ -82,7 +82,7 @@
     "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3",
-    "vite": "^5.4.20"
+    "vite": "5.4.20"
   },
   "engines": {
     "node": ">=18.0.0"
