--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
+    "storybook:test": "storybook test --ci",
+    "lint:design": "NEXT_TELEMETRY_DISABLED=1 eslint \"src/**/*.{ts,tsx}\" --rule \"tailwindcss/enforces-negative-arbitrary-values: off\"",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "type-check": "tsc --noEmit",
     "test": "jest --watch",
@@ -73,6 +75,7 @@
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.31",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-tailwindcss": "^3.17.5",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5.6",
