--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "storybook:test": "storybook test --ci",
+    "storybook:test": "start-server-and-test storybook http://localhost:6006 storybook:test:run",
+    "storybook:test:run": "test-storybook --config-dir .storybook --url http://localhost:6006 --ci",
     "lint:design": "NEXT_TELEMETRY_DISABLED=1 eslint \"src/**/*.{ts,tsx}\" --rule \"tailwindcss/enforces-negative-arbitrary-values: off\"",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "type-check": "tsc --noEmit",
@@ -59,8 +60,9 @@
     "@storybook/addon-interactions": "8.6.14",
     "@storybook/builder-vite": "8.6.14",
     "@storybook/react": "8.6.14",
-    "@storybook/react-vite": "8.6.14",
+    "@storybook/react-vite": "^8.6.14",
     "@storybook/test": "8.6.14",
+    "@storybook/test-runner": "^0.23.0",
     "@tailwindcss/typography": "^0.5.10",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
@@ -81,6 +83,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "start-server-and-test": "^2.1.2",
     "storybook": "8.6.14",
     "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
