--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:percy": "percy exec -- playwright test",
-    "percy:storybook": "percy exec --storybook --build-storybook-script \"npm run build-storybook\"",
+    "percy:storybook": "npm run build-storybook && percy snapshot storybook-static",
     "lighthouse": "lhci autorun"
   },
   "dependencies": {
