--- a/backend/.env.example
+++ b/backend/.env.example
@@ -71,7 +71,8 @@ SENTRY_TRACES_SAMPLE_RATE=1.0
 
 # Monitoring - New Relic
 NEWRELIC_LICENSE_KEY=
-NEWRELIC_APPNAME="ElderCare SG - Local"
+NEWRELIC_ENABLED=false
+NEWRELIC_APP_NAME="ElderCare SG - Local"
 
 # PDPA Compliance
 PRIVACY_POLICY_VERSION=1.0
