--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -4,6 +4,8 @@ NEXT_PUBLIC_API_URL=http://localhost:8000/api/v1
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # Analytics
+# GA4 measurement id (preferred)
+NEXT_PUBLIC_GA4_ID=
 NEXT_PUBLIC_GA_MEASUREMENT_ID=
 NEXT_PUBLIC_HOTJAR_ID=
 NEXT_PUBLIC_HOTJAR_VERSION=6
