--- a/backend/.env.example
+++ b/backend/.env.example
@@ -55,6 +55,9 @@ CALENDLY_WEBHOOK_SIGNING_KEY=
 # External Services - Mailchimp
 MAILCHIMP_API_KEY=
 MAILCHIMP_LIST_ID=
+MAILCHIMP_SERVER=
+MAILCHIMP_ENABLED=false
+MAILCHIMP_WEBHOOK_SECRET=
 
 # External Services - Twilio
 TWILIO_ACCOUNT_SID=
